tests/js_error/source_locations/expression/template/tagged_template_throws.exp
Error: 
  ┌ tests/js_error/source_locations/expression/template/tagged_template_throws.js:2:9
  |
2 |   throw new Error()
  |         ^
Stack trace:
  at foo (tests/js_error/source_locations/expression/template/tagged_template_throws.js:2:9)
  at <global> (tests/js_error/source_locations/expression/template/tagged_template_throws.js:5:1)